# maru_quant

./: .gitignore  README.md  config.json  dataloader.py  downloader.py  main.py  pyproject.toml  quant_dev.md  requirements.txt
analyzer/: WinLossRatioAnalyzer.py  __init__.py  sharperatio_30min.py
data/: XAUUSD_30_2020-01-01-2025-07-27.csv
data/longtime/: OANDA_XAUUSD, 30_2023-01-02-2025-07-25.csv
data/test/: OANDA_XAUUSD, 30_yearly_uptrend.csv
data/train/: OANDA_XAUUSD, 30_yearly_uptrend.csv
docs/: quant_dev.md
downloader/: alpha_vantage_downloader.py  config_loader.py  twelvedata_downloader.py  yf_downloader.py
indicator/: CandleStrengthIndex.py  PivotHigh.py
indicator/test/: test_CSI.py  test_indicators.py
scripts/: run_backtest.py  run_mt5_gateway.py
src/maru_quant/: __init__.py
src/maru_quant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/maru_quant/utils/: logger.py  (+5 more)
strategy/: Breakout.py  ConsecNdays.py  Macky_deprecated.py  SMAStrategy.py  SupportResistanceBreakout.py  __init__.py  showdata.py
strategy/breakout/: MultiScaleBreakout.py  MultiScaleResistBreakout.py  SimpleBreakout.py
strategy/mean_reversion/: bollinger_reversion.py
strategy/utils/: TakeProfitStopLoss.py  __init__.py  bracketorder.py
trade/: CommissionInfo.py
trade/commission_info/: CommissionInfo.py
trade/mt5_gateway/: __init__.py  config.json  mt5_connection_manager.py  mt5_gateway.py
utils/: __init__.py  backtest_runner.py  config_manager.py  dataloader.py  fileoperator.py  logger.py  optimization_results1.csv  optimizer.py  walkforward.py
(+29 files in other folders)
